Some marketing website fixes (#1240)
I fixed a few issues on our marketing pages:

- When referencing Shiki using importmaps, the browser tried to resolve
relative imports relative to `origin`. I fixed that by using the URL
instead of importmaps.
- Some browsers like Safari iOS or Brave might block the loading of the
JS `cookie-banner.js` ESM module assuming it's tracking logic based on
the name. I changed the name of the module and it started working. I
also changed the implementation to use cookies instead.
- I fixed a layout issue on the home page caused by the previews that
led to horizontal scrolling.
- I fixed an issue in the mobile navigation menu that caused the Safari
iOS search bar hiding the bottom of the menu.

--- a/priv/static/marketing/css/marketing/layout.css
+++ b/priv/static/marketing/css/marketing/layout.css
@@ -245,8 +245,10 @@ body {
   background: var(--dark-violet);
   display: none;
   flex-direction: column;
-  height: 100vh;
+  max-height: calc(100vh - env(safe-area-inset-bottom));
+  height: 100%;
   overflow-y: auto;
+  padding-bottom: env(safe-area-inset-bottom);
 }
 
 .marketing__header__bar__mobile__menu__main {
@@ -274,9 +276,7 @@ body {
       display: flex;
       max-height: 1000px;
       opacity: 1;
-      transition:
-        max-height 0.5s ease-in-out,
-        opacity 0.5s ease;
+      transition: max-height 0.5s ease-in-out, opacity 0.5s ease;
     }
   }
   &[data-collapsed="true"] {
@@ -300,9 +300,7 @@ body {
       display: flex;
       max-height: 0;
       overflow: hidden;
-      transition:
-        opacity 0.5s ease,
-        max-height 0.5s ease;
+      transition: opacity 0.5s ease, max-height 0.5s ease;
     }
   }
 }
